# mcp_server_code_extractor

./: .gitignore  CLAUDE.md  README.md  debug_async.py  debug_captures.py  debug_decorated.py  debug_hierarchy.py  debug_query.py  debug_query2.py  debug_ranges.py  debug_test.py  debug_test_full.py  mcp_code_extractor.py  mcp_server_code_extractor_new.py  progress-dont-read.md  pyproject.toml  test_new_mcp.py  test_semantic_search.py  test_symbol_definitions.py
.github/workflows/: release.yml
code_extractor/: extractor.py  file_reader.py  languages.py  models.py  search_engine.py  server.py
code_extractor/queries/: python.scm
tests/: test_url_integration.py
